# PatchDeltaPacker

./: Cargo.toml
src/: chunk_builder.rs  chunk_extractor.rs  config_reader.rs  constants.rs  directory_scanner.rs  main.rs  manifest_gen.rs
src/chunker/: chunk_builder.rs  chunk_extractor.rs  chunk_structs.rs  mod.rs
src/concurrency/: job.rs  mod.rs  worker_pool.rs
src/config/: config_reader.rs
src/manifests/: manifest_gen.rs  manifest_reader.rs  manifest_ser.rs  manifest_structs.rs  mod.rs
src/patcher/: mod.rs  patch_package_gen.rs  patch_plan_gen.rs  patch_ser.rs  patch_structs.rs
src/tooling/: directory_scanner.rs  mod.rs
