[package]
name = "patch_packer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
xxhash-rust = { version = "0.8.16", features = ["xxh64"] }
bincode = { version = "2.0.1", features = ["serde"] }
tokio = { version = "1.52.3", features = ["full"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"